# spiffe-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
proto/: workloadapi.proto
spiffe/: Cargo.toml
spiffe-id/: Cargo.toml
spiffe-id/src/: error.rs  id.rs  lib.rs  path.rs  serde_support.rs  trust_domain.rs
spiffe-proto/: Cargo.toml
spiffe-proto/proto/: workloadapi.proto
spiffe-proto/src/: client.rs  lib.rs  server.rs  types.rs
spiffe-tls/: Cargo.toml
spiffe-tls/src/: error.rs  lib.rs  material.rs  policy.rs  resolver.rs  verifier.rs
spiffe-tls/src/builder/: client.rs  mod.rs  server.rs
spiffe/src/: client.rs  der.rs  error.rs  jwt.rs  lib.rs  types.rs
spiffe/src/client/: stream.rs  types.rs
spire-api-proto/: Cargo.toml
spire-api-proto/proto/spire/api/agent/debug/v1/: debug.proto
spire-api-proto/proto/spire/api/agent/delegatedidentity/v1/: delegatedidentity.proto
spire-api-proto/proto/spire/api/agent/logger/v1/: logger.proto
spire-api-proto/proto/spire/api/server/agent/v1/: agent.proto
spire-api-proto/proto/spire/api/server/bundle/v1/: bundle.proto
spire-api-proto/proto/spire/api/server/debug/v1/: debug.proto
spire-api-proto/proto/spire/api/server/entry/v1/: entry.proto
spire-api-proto/proto/spire/api/server/localauthority/v1/: localauthority.proto
spire-api-proto/proto/spire/api/server/logger/v1/: logger.proto
spire-api-proto/proto/spire/api/server/svid/v1/: svid.proto
spire-api-proto/proto/spire/api/server/trustdomain/v1/: trustdomain.proto
spire-api-proto/proto/spire/api/types/: agent.proto  attestation.proto  bundle.proto  entry.proto  federateswith.proto  federationrelationship.proto  jointoken.proto  jwtsvid.proto  logger.proto  selector.proto  spiffeid.proto  status.proto  witsvid.proto  x509svid.proto
spire-api-proto/src/: lib.rs  service.rs
spire-api-proto/src/agent/: mod.rs
spire-api-proto/src/agent/debug/: mod.rs  types.rs
spire-api-proto/src/agent/delegated_identity/: client.rs  mod.rs  server.rs  types.rs
spire-api-proto/src/agent/logger/: mod.rs  types.rs
spire-api-proto/src/macros/: client.rs  grpc.rs  mod.rs  server.rs
spire-api-proto/src/server/: mod.rs
spire-api-proto/src/server/agent/: mod.rs  types.rs
spire-api-proto/src/server/bundle/: mod.rs  types.rs
spire-api-proto/src/server/debug/: mod.rs  types.rs
spire-api-proto/src/server/entry/: mod.rs  types.rs
spire-api-proto/src/server/local_authority/: mod.rs  types.rs
spire-api-proto/src/server/localauthority/: mod.rs  types.rs
spire-api-proto/src/server/logger/: mod.rs  types.rs
spire-api-proto/src/server/svid/: mod.rs  types.rs
spire-api-proto/src/server/trust_domain/: mod.rs  types.rs
spire-api-proto/src/server/trustdomain/: mod.rs  types.rs
spire-api-proto/src/types/: agent.rs  attestation.rs  bundle.rs  entry.rs  federates_with.rs  federation_relationship.rs  federation_relationship_.rs  join_token.rs  jwt_svid.rs  logger.rs  mod.rs  selector.rs  spiffe_id.rs  status.rs  well_known.rs  wit_svid.rs  x509_svid.rs
src/: interceptor.rs  lib.rs  main.rs  proto.rs  wrapper.rs
src/id/: error.rs  mod.rs  serde_support.rs
src/proto/: client.rs  server.rs  types.rs
src/wrapper/: client.rs  der.rs  error.rs  jwt.rs  mod.rs  splitter.rs  types.rs
src/wrapper/client/: service.rs  stream.rs  types.rs
tonic-service/: Cargo.toml
tonic-service/src/: client.rs  grpc.rs  lib.rs  server.rs  service.rs
