[workspace]
resolver = "2"
members = ["spiffe-id"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
thiserror = { version = "2.0.12", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["alloc"] }

[package]
name = "spiffe"
version = "0.0.0"
edition.workspace = true

[dependencies]
spiffe-id = { path = "spiffe-id", optional = true }

prost = "0.13.5"
prost-types = "0.13.5"

tonic = { version = "0.13.0", default-features = false, features = [
    "prost",
], optional = true }
futures-util = { version = "0.3.31", default-features = false, features = [
    "alloc",
], optional = true }
http = { version = "1.3.1", optional = true }
http-body = { version = "1.0.1", optional = true }

# Used for the `wrapper` feature
thiserror = { workspace = true, default-features = false, optional = true }
rustls-pki-types = { version = "1.11.0", features = [
    "alloc",
], default-features = false, optional = true }
tower-service = { version = "0.3.3", optional = true }
kstring = { version = "2.0.2", optional = true }

[dev-dependencies]
const-decoder = "0.4.0"

[features]
default = ["wrapper", "client"]
# expose useful type wrapper for SPIFFE workload
wrapper = [
    "dep:thiserror",
    "dep:rustls-pki-types",
    "dep:spiffe-id",
    "dep:tower-service",
    "dep:kstring",
]
grpc = ["dep:tonic", "dep:futures-util", "dep:http", "dep:http-body"]
client = ["grpc"]
server = ["grpc"]

[profile.release]
opt-level = "s"
lto = true
