[package]
name = "spiffe-proto"
version = "0.0.0"
edition.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
futures-util = { workspace = true, optional = true }
http = { workspace = true, optional = true }
http-body = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
tower-service = { workspace = true, optional = true }

[features]
default = ["client"]

client = ["_grpc"]
server = ["_grpc", "dep:tower-service"]

_grpc = [
    "dep:futures-util",
    "dep:http",
    "dep:http-body",
    "dep:tonic-prost",
    "dep:tonic",
]
