[package]
name = "spiffe-proto"
version = "0.0.0"
edition.workspace = true

[dependencies]
futures-util = { workspace = true, optional = true }
http = { workspace = true, optional = true }
http-body = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
tower-service = { workspace = true, optional = true }
buffa = "0.3.0"
buffa-types = "0.3.0"
tonic-buffa = { version = "0.1.0", path = "../../tonic-buffa/tonic-buffa" }
buffa-derive = { version = "0.1.0", path = "../../buffa-derive" }
bytes = "1.11.1"

[features]
default = ["client", "server"]

client = ["_grpc"]
server = ["_grpc", "dep:tower-service"]

_grpc = [
    "dep:futures-util",
    "dep:http",
    "dep:http-body",
    "dep:tonic-prost",
    "dep:tonic",
]
