[package]
name = "spiffe-tls"
version = "0.0.0"
edition.workspace = true

[dependencies]
futures-util = { workspace = true, features = ["alloc"] }
rustls-pki-types.workspace = true
rustls-webpki.workspace = true
spiffe.workspace = true
spiffe-id.workspace = true
tokio-rustls.workspace = true
upstre.workspace = true
