
[package]
name = "spiffe"
version = "0.0.0"
edition.workspace = true

[dependencies]
spiffe-id.workspace = true
spiffe-proto = { workspace = true, features = ["client"] }

thiserror.workspace = true
futures-util.workspace = true
tonic.workspace = true
http.workspace = true
http-body.workspace = true
prost.workspace = true
prost-types.workspace = true
rustls-pki-types = { workspace = true, features = ["alloc"] }

# JWT dependencies
serde_json = { workspace = true, features = ["alloc"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
base64ct = { workspace = true, features = ["alloc"], optional = true }

[dev-dependencies]
const-decoder.workspace = true

[features]
default = ["jwt", "unchecked-api"]

# enable JWT support in wrapper
jwt = ["dep:base64ct", "dep:serde", "dep:serde_json"]

# allow to create high-level types without checking the validation
unchecked-api = []
